add test plain format